<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tao_pegtl_vendor</name>
  <version>0.0.1</version>
  <description>
    Wrapper around pegtl, providing nothing but a dependency on pegtl, on some systems.
    On others, it provides an ExternalProject build of pegtl.
  </description>
  <maintainer email="Tomoya.Fujita@sony.com">Tomoya Fujita</maintainer>
  <maintainer email="Barry.Xu@sony.com">Barry Xu</maintainer>
  <maintainer email="Lihui.Chen@sony.com">Chen Lihui</maintainer>
  <license>Apache License 2.0</license>  <!-- the contents of this package are Apache 2.0 -->
  <license>MIT</license>  <!-- pegtl is MIT -->

  <url type="website">https://github.com/taocpp/PEGTL</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
